fix tooltip gap point on flag

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ div[data-create="createJobs"]::before {
   background-color: #000;
   color: #fff;
   border-radius: 4px;
-  top: 104px;
+  top: 103px;
   left: 54px;
   padding: 0 3px;
   box-sizing: border-box;
